Feat: added a forgot password route to help users recover forgotten passwords
